@@ -24,7 +24,9 @@
         <item>
             <key> <string>activate_script_name</string> </key>
             <value>
-              <tuple/>
+              <list>
+                <string>sendCrendentialsByEMail</string>
+              </list>
             </value>
         </item>
         <item>
